syntax = "proto3";

package helloname;

option go_package = "api/proto";

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string username = 1;
}

message HelloResponse {
    string message = 1;
}